Use latest junit.